--- a/VCPhotoManager/VCPhotoManager.csproj
+++ b/VCPhotoManager/VCPhotoManager.csproj
@@ -49,6 +49,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BrilloContrasteForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="BrilloContrasteForm.Designer.cs">
+      <DependentUpon>BrilloContrasteForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Clases\Manager.cs" />
     <Compile Include="HistogramaGraficsForm.cs">
       <SubType>Form</SubType>
@@ -70,6 +76,9 @@
     <Compile Include="ImageForm.Designer.cs">
       <DependentUpon>ImageForm.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="BrilloContrasteForm.resx">
+      <DependentUpon>BrilloContrasteForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="HistogramaGraficsForm.resx">
       <DependentUpon>HistogramaGraficsForm.cs</DependentUpon>
     </EmbeddedResource>
