--- a/VCPhotoManager/VCPhotoManager.csproj
+++ b/VCPhotoManager/VCPhotoManager.csproj
@@ -39,6 +39,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Speech" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -49,7 +50,37 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AcercaDeForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AcercaDeForm.Designer.cs">
+      <DependentUpon>AcercaDeForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="BrilloContrasteForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="BrilloContrasteForm.Designer.cs">
+      <DependentUpon>BrilloContrasteForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Clases\Manager.cs" />
+    <Compile Include="DifAbsolutaForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DifAbsolutaForm.Designer.cs">
+      <DependentUpon>DifAbsolutaForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DiferenciaForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DiferenciaForm.Designer.cs">
+      <DependentUpon>DiferenciaForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GammaForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GammaForm.Designer.cs">
+      <DependentUpon>GammaForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="HistogramaGraficsForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -70,6 +101,27 @@
     <Compile Include="ImageForm.Designer.cs">
       <DependentUpon>ImageForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="RangosForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RangosForm.Designer.cs">
+      <DependentUpon>RangosForm.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="AcercaDeForm.resx">
+      <DependentUpon>AcercaDeForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="BrilloContrasteForm.resx">
+      <DependentUpon>BrilloContrasteForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DifAbsolutaForm.resx">
+      <DependentUpon>DifAbsolutaForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DiferenciaForm.resx">
+      <DependentUpon>DiferenciaForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GammaForm.resx">
+      <DependentUpon>GammaForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="HistogramaGraficsForm.resx">
       <DependentUpon>HistogramaGraficsForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -87,6 +139,9 @@
     </Compile>
     <EmbeddedResource Include="ImageForm.resx">
       <DependentUpon>ImageForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="RangosForm.resx">
+      <DependentUpon>RangosForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
