--- a/VCPhotoManager/VCPhotoManager.csproj
+++ b/VCPhotoManager/VCPhotoManager.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Speech" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -63,6 +64,12 @@
       <DependentUpon>BrilloContrasteForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Clases\Manager.cs" />
+    <Compile Include="CrossSectionForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CrossSectionForm.Designer.cs">
+      <DependentUpon>CrossSectionForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="RotacionForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -124,6 +131,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="BrilloContrasteForm.resx">
       <DependentUpon>BrilloContrasteForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CrossSectionForm.resx">
+      <DependentUpon>CrossSectionForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="RotacionForm.resx">
       <DependentUpon>RotacionForm.cs</DependentUpon>
